fixed all commands' handlers