@@ -1,6 +1,7 @@
 package gp.assessments.chat.command;
 
 import gp.assessments.chat.common.error.InvalidJoinCommandParameterException;
+import gp.assessments.chat.utils.StringUtils;
 import lombok.Getter;
 
 @Getter
@@ -9,7 +10,7 @@ public class JoinCommand implements Command {
 
     @Override
     public void init(String[] params) {
-        if (params.length != 1 || params[0].isBlank()) {
+        if (params.length != 1 || StringUtils.isBlank(params[0])) {
             throw new InvalidJoinCommandParameterException("Channel name cannot be blank.");
         }
         this.channelName = params[0];
