@@ -1,6 +1,7 @@
 package gp.assessments.chat.command;
 
 import gp.assessments.chat.common.error.InvalidLoginCommandParameterException;
+import gp.assessments.chat.utils.StringUtils;
 import lombok.Getter;
 
 @Getter
@@ -10,7 +11,7 @@ public class LoginCommand implements Command {
 
     @Override
     public void init(String[] params) {
-        if (params.length != 2 || params[0].isBlank() || params[1].isBlank()) {
+        if (params.length != 2 || StringUtils.isBlank(params[0]) || StringUtils.isBlank(params[1])) {
             throw new InvalidLoginCommandParameterException("User name or password cannot be blank.");
         }
         this.userName = params[0];
