@@ -1,6 +1,7 @@
 package gp.assessments.chat.command;
 
 import gp.assessments.chat.common.error.InvalidMessageCommandParameterException;
+import gp.assessments.chat.utils.StringUtils;
 import lombok.Getter;
 
 @Getter
@@ -9,7 +10,7 @@ public class MessageCommand implements Command {
 
     @Override
     public void init(String[] params) {
-        if (params.length != 1 || params[0].isBlank()) {
+        if (params.length != 1 || StringUtils.isBlank(params[0])) {
             throw new InvalidMessageCommandParameterException("Message cannot be blank");
         }
         this.message = params[0];
